pkg/tests/testthat/errors/mdl/ulfunc_err.mdl
ul_function eta(x, y);
ident z = eta(x > 2, y);
